# gr-specest

./: CMakeLists.txt  README
CMake/: FindArmadillo.cmake
doc/: CMakeLists.txt
python/: CMakeLists.txt  test_runner.py
src/: CMakeLists.txt
swig/: CMakeLists.txt  specest.i
